# Taxes_Montreal

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  start.sh
frontend/: index.html  simulateur.jsx
src/openfisca_montreal/: __init__.py
src/openfisca_montreal/parameters/taxes_foncieres/: seuils.yaml
src/openfisca_montreal/parameters/taxes_foncieres/arrondissements/: taux_arrondissements.yaml
src/openfisca_montreal/parameters/taxes_foncieres/conseil_municipal/: taxe_artm.yaml  taxe_fonciere_generale.yaml  taxe_voirie.yaml
src/openfisca_montreal/variables/: __init__.py  base_imposition.py  immeuble.py  taxe_arrondissement.py  taxe_fonciere_generale.py  taxes_secondaires.py  total_taxes.py
tests/openfisca_montreal/: test_taxes_foncieres.yaml
