[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openfisca-montreal"
version = "0.1.0"
description = "Extension OpenFisca pour les taxes foncières de la Ville de Montréal"
readme = "README.md"
license = "AGPL-3.0-only"
authors = ["Maxime <max@example.com>"]
repository = "https://github.com/your-org/openfisca-montreal"
keywords = ["openfisca", "montreal", "taxes", "foncier", "rules-as-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{ include = "openfisca_montreal", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openfisca-country-template = ">=7.1.0,<8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0,<9.0"
flake8 = ">=6.0,<8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
